--- a/themes/theme_mairie/layouts/partials/header.html
+++ b/themes/theme_mairie/layouts/partials/header.html
@@ -14,18 +14,22 @@
     ul#menu li {display:inline;}
 
 </style>
-
-
 <div class="header">
+    
     <a href="/index.html" class="logo">Mairie swag</a>
     <div class="header-right">
+        <div class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Events</a>
+            <div class="dropdown-content">
+                <a href="/events">Events</a>
+                <a href="/showevents/upcoming">Upcoming</a>
+                <a href="/showevents/archived">Archived</a>
+            </div>
+        </div>
         <a href="/conseil-municipal">Conseil municipal</a>
-        <a href="/events">Events</a>
-        <a href="/associations">Associations</a>
-        <a href="/showevents/upcoming">Upcoming</a>
-        <a href="/showevents/archived">Archivés</a>
         <a href="/associations">Associations</a>
     </div>
+    
 </div>
 <hr>
 <!-- <h1>Une mairie plutot pas mal</h1>
