--- a/themes/theme_mairie/layouts/index.html
+++ b/themes/theme_mairie/layouts/index.html
@@ -10,6 +10,8 @@
             
 <div class="events">
     <a href="{{ .Permalink }}">{{ .Title }}<br><p style="color:black">Date de l'évenement {{ .Params.when }}</p></a>
+    <img src="/image/eiffel.jpg">
+    
 </div>
 {{end}}
 {{end}}
