--- a/themes/theme_mairie/layouts/index.html
+++ b/themes/theme_mairie/layouts/index.html
@@ -9,7 +9,7 @@
 
             
 <div class="events">
-    <a href="{{ .Permalink }}">{{ .Title }}<br><p style="color:black">Date de l'évenement {{ .Params.when }}</p></a>
+    <a href="{{ .Permalink }}">{{ .Title }}<br><p style="color:black">Date de l'évenement: {{ .Params.when }}</p></a>
     <img src="/image/eiffel.jpg">
     
 </div>
