--- a/themes/theme_mairie/layouts/showevents/showevents.html
+++ b/themes/theme_mairie/layouts/showevents/showevents.html
@@ -5,7 +5,7 @@
 
     <h1>Liste des évenements</h1>    
     {{ if eq .URL "/showevents/upcoming/" }}
-    <h2>Upcoming à </h2>
+    <h2>Upcoming à Paris</h2>
     {{ partial "upcoming.html" . }}
     {{ else }}
     <h2>Ca s'est passé à Paris</h2>
